--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,22 @@ code {
 .notes-month section {
   font-size: 28px;
 }
+
+.fab {
+  border-radius: 100%;
+  bottom: 25px;
+  font-size: 30px;
+  padding: 25px;
+  position: fixed;
+  right: 25px;
+}
+
+.fab-danger {
+  border-radius: 100%;
+  bottom: 25px;
+  font-size: 22px;
+  position: fixed;
+  left: 25px;
+  width: 70px;
+  height: 70px;
+}
